--- a/index.html
+++ b/index.html
@@ -6,24 +6,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS-My Site</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico?v=2"
+    <link rel="icon" href="favicon.ico?v=2">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Redressed&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Courgette&family=Redressed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
-        <img src="images/cloud.png">
+        <img class="top-cloud" src="images/cloud.png">
         <h1>I'm Ramiro</h1>
-        <p>I'm learning to code.</p>
-        <img src="images/cloud.png">
+        <h2>Programmer in-training.</h2>
+        <img class="bottom-cloud" src="images/cloud.png">
         <img src="images/mountain.png">
     </div>
     
     <div class="middle-container">
+        <div class="profile">
+          <img class="profile-image" src="images\167905-aliens-black_background.jpg" alt="">
+          <h2>Hello.</h2>
+          <p class="intro">Learning to code.  Exploring different languages and gaining more experience through online courses, books and exercises.</p>
+    </div>
+    <hr>   
+    <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+            <img class="matrix" src="https://media4.giphy.com/media/quEsMOrr3hmQ8/giphy.gif?cid=ecf05e4713au61x9q0m1mh0f9t7rugz9lsao0dsbxfrmekvc&rid=giphy.gif&ct=g" alt="">
+            <h3>Languages and tools that I have experience with.</h3>
+            <p>HTML, CSS, JavaScript, React, JSON, Git Hub, Git, Chrome, Dev Tools and Python.</p>
+        </div>
+    <br>
+        <h3>Design & Development</h3>
+        <div class="skill-row">
+            <img class="vs-code" src="https://code.visualstudio.com/opengraphimg/opengraph-blog.png" alt="">
+            <p>I started coding Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+    </div>
+    <hr>     
+    <div class="contact-me">
+          <h2>Get In Touch</h2>
+          <h3>I can be reached by the following methods:</h3>
+          <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+    </div>
 
-   </div>
-
-   <div class="bottom-container">
-
-   </div>
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p class="copyright">© 2022 Ramiro chillin at home learning to code.</p>
+    </div>
 
 </body>
 </html>
